extends Node2D
class_name TrickUiManager

@export var flash_cost := 3
@export var smell_cost := 3
@export var dnace_cost := 3
@export var sing_cost := 3

@export var flash_button : TrickButton
@export var smell_button : TrickButton
@export var dance_button : TrickButton
@export var sing_button : TrickButton
